# drum_book_tracker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.audiveris  README.md  bandit.yml  compose.dev.yml  compose.override.yml  compose.prod.yml  compose.test.yml  compose.yml  pyproject.toml  skills-lock.json  yamlfmt.yml
.agents/skills/dependabot/: SKILL.md
.agents/skills/django-perf-review/: SKILL.md
.agents/skills/djlint-template-validation/: SKILL.md
.agents/skills/pytest-coverage/: SKILL.md
.agents/skills/ruff-recursive-fix/: SKILL.md
.agents/skills/suggest-awesome-github-copilot-agents/: SKILL.md
.agents/skills/suggest-awesome-github-copilot-skills/: SKILL.md
.agents/skills/test-driven-development/: SKILL.md  testing-anti-patterns.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  test.yml
audiveris/: server.py
caddy/: Caddyfile
src/book_tracker/: admin.py  api.py  forms.py  models.py  ocr.py  schemas.py  tests.py  urls.py  views.py
src/book_tracker/migrations/: 0001_initial.py  0002_author_book_authors.py  0002_exercise_identifier_description.py  0003_exercise_notation_fields.py  0003_tag_exercise_page_number_exercise_tags.py  0004_author_unique_name.py  0004_remove_exercise_notation_musicxml.py  0005_remove_exercise_tags_delete_tag.py  0006_exercise_tags.py
src/book_tracker/templates/: base.html
src/book_tracker/templates/book_tracker/: author_edit_row.html  authors.html  book_edit_row.html  books.html  exercise_bulk_create.html  exercise_detail.html  exercise_edit_row.html  exercise_options.html  exercises.html  page_range_row.html  practice_log_edit_row.html  practice_logs.html  section_edit_row.html  section_options.html  sections.html  tag_edit_row.html  tags.html
src/book_tracker/templates/book_tracker/authors/: _edit_row.html  _form.html  _list.html  _row.html  list.html
src/book_tracker/templates/book_tracker/books/: _edit_row.html  _form.html  _list.html  _row.html  list.html
src/book_tracker/templates/book_tracker/exercises/: _edit_row.html  _filters.html  _form.html  _list.html  _row.html  bulk_create.html  detail.html  list.html
src/book_tracker/templates/book_tracker/logs/: _edit_row.html  _exercise_options.html  _form.html  _list.html  _row.html  _section_options.html  list.html
src/book_tracker/templates/book_tracker/sections/: _edit_row.html  _form.html  _list.html  _row.html  list.html
src/book_tracker/templates/book_tracker/tags/: _edit_row.html  _form.html  _list.html  _row.html  list.html
src/book_tracker/templates/partials/: _messages.html  _navbar.html
src/book_tracker/templatetags/: form_tags.py
src/core/: htmx.py  settings.py  settings_local_test.py  urls.py
src/tests/: conftest.py  factories.py  test_book_views.py  test_exercise_bulk_create.py  test_exercise_list_filters.py  test_forms.py  test_model_constraints.py  test_model_relations.py  test_models.py  test_notation.py  test_ocr.py  test_tag_views.py
src/tests/apps/book_tracker/forms/: test_forms.py
src/tests/apps/book_tracker/models/: test_exercise_statistics.py  test_model_constraints.py  test_model_relations.py  test_models.py
src/tests/apps/book_tracker/views/: test_author_views.py  test_book_views.py  test_exercise_bulk_create.py  test_exercise_crud_views.py  test_exercise_list_filters.py  test_log_views.py  test_notation.py  test_section_views.py  test_tag_views.py  test_template_contract.py
