[project]
name = "drum-book-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "pytest-asyncio>=0.24.0",
    "django-dbbackup>=4.2.1",
    "python-dotenv>=1.0.1",
    "django-taggit>=6.0.0",
    "django-grappelli>=4.0.1",
    "django-structlog>=8.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/book_tracker"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "pre-commit>=3.8.0",
    "pytest-django>=4.8.0",
    "bandit[toml]>=1.7.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
asyncio_mode = "auto"

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']
