[project]
name = "drum-book-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-ninja>=1.6.2",
]

[dependency-groups]
dev = [
    "django-stubs-ext>=6.0.2",
    "django-types>=0.23.0",
    "identify>=2.6.18",
    "pre-commit>=4.5.1",
    "ruff>=0.15.10",
]
test = ["pytest>=9.0.3", "pytest-django>=4.12.0"]

[tool.pyright]
exclude = ["src/manage.py", "src/book_tracker/migrations/**"]

[tool.ruff]
target-version = "py314"
extend-exclude = ["src/manage.py", "src/book_tracker/migrations/**"]
line-length = 180

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D103", "D104", "D105"]
fixable = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"src/tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
]
